10 - Problems with Chai Test

--- a/cardgames/index.html
+++ b/cardgames/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <div>
+        <h1>Promineo Tech</h1>
+        <h2>Front-End Boot Camp</h2>
+        <h3>Week Six Coding Assignment</h3>
+        <ul>
+            <li><a href="http://localhost:5500/class-card-test.html">class Card Test</a></li>
+            <li><a href="http://localhost:5500/class-cards-test.html">class Cards Test</a></li>
+        </ul>
+    </div>
 </body>
     <script src="./src/test.js" type="module"></script>
 </html>
