--- a/cardgames/class-cards-test.html
+++ b/cardgames/class-cards-test.html
@@ -21,7 +21,7 @@
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/chai/chai.js"></script>
     <script src="./classes/cards.js" type="module"></script>
-    <script>mocha.setup('bdd')</script>
+    <script>mocha.setup('bdd');</script>
     <script src="./test/class-cards-test.js" type="module"></script>
     <script>mocha.run();</script>
 
