11 - stable working War-Card-Game

--- a/cardgames/class-cards-test.html
+++ b/cardgames/class-cards-test.html
@@ -20,6 +20,7 @@
     <div id="fixtures"></div>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/chai/chai.js"></script>
+    <script src="./classes/card.js" type="module"></script>
     <script src="./classes/cards.js" type="module"></script>
     <script>mocha.setup('bdd');</script>
     <script src="./test/class-cards-test.js" type="module"></script>
