--- a/cardgames/index.html
+++ b/cardgames/index.html
@@ -17,5 +17,5 @@
         </ul>
     </div>
 </body>
-    <script src="./src/test.js" type="module"></script>
+    <script src="./src/game-play.js" type="module"></script>
 </html>
