--- a/cardgames/index.html
+++ b/cardgames/index.html
@@ -12,8 +12,8 @@
         <h2>Front-End Boot Camp</h2>
         <h3>Week Six Coding Assignment</h3>
         <ul>
-            <li><a href="http://localhost:5500/class-card-test.html">class Card Test</a></li>
-            <li><a href="http://localhost:5500/class-cards-test.html">class Cards Test</a></li>
+            <li><a href="class-card-test.html">class Card Test</a></li>
+            <li><a href="class-cards-test.html">class Cards Test</a></li>
         </ul>
     </div>
 </body>
